@@ -108,11 +108,11 @@ diag_log ["DOM playerdisconnected: _playtime", _playtime];
 private _tks = if (!isNil "_pa") then {_pa # 14} else {0};
 
 #ifndef __INTERCEPTDB__
-"extdb3" callExtension format ["1:dom:updatePlayer:%1:%2:%3:%4:%5:%6:%7:%8:%9", _infkills, _softveckills, _armorkills, _airkills, _deaths, _totalscore, _playtime, _tks, _uid];
+"extdb3" callExtension format ["1:dom:updatePlayer:%1:%2:%3:%4:%5:%6:%7:%8:%9", _infkills, _softveckills, _armorkills, _airkills, _deaths, _totalscore, _playtime, _tks, _uid, _pa # 15];
 __TRACE("extDB3 called")
 #else
 if (d_interceptdb) then {
-	["updatePlayer", [_infkills, _softveckills, _armorkills, _airkills, _deaths, _totalscore, _playtime, _tks, _uid]] call dsi_fnc_queryconfigasync;
+	["updatePlayer", [_infkills, _softveckills, _armorkills, _airkills, _deaths, _totalscore, _playtime, _tks, _uid, _pa # 15]] call dsi_fnc_queryconfigasync;
 };
 
 __TRACE("interceptDB called")
