@@ -39,11 +39,11 @@ SQL1_4 = END
 SQL1_INPUTS = 1
 
 [playerGet]
-SQL1_1 = SELECT name, playtime, infkills, softveckills, armorkills, airkills, deaths, totalscore, radiotowerkills, mtsmkills, numplayedonserver, campscaptured, teamkills, revives FROM players WHERE playerid=?;
+SQL1_1 = SELECT name, playtime, infkills, softveckills, armorkills, airkills, deaths, totalscore, radiotowerkills, mtsmkills, numplayedonserver, campscaptured, teamkills, revives, distar FROM players WHERE playerid=?;
 
 SQL1_INPUTS = 1
 
-OUTPUT = 1-string, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13
+OUTPUT = 1-string, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14
 
 [playerGetTS]
 SQL1_1 = SELECT totalscore, infkills, softveckills, armorkills, airkills, deaths FROM players WHERE playerid=?;
@@ -90,9 +90,9 @@ SQL1_1 = UPDATE players SET revives = revives + 1 WHERE playerid=?;
 SQL1_INPUTS = 1
 
 [updatePlayer]
-SQL1_1 = UPDATE players SET infkills = infkills + ?, softveckills = softveckills + ?, armorkills = armorkills + ?, airkills = airkills + ?, deaths = deaths + ?, totalscore = ?, playtime = playtime + ?, teamkills = teamkills + ? WHERE playerid = ?;
+SQL1_1 = UPDATE players SET infkills = infkills + ?, softveckills = softveckills + ?, armorkills = armorkills + ?, airkills = airkills + ?, deaths = deaths + ?, totalscore = ?, playtime = playtime + ?, teamkills = teamkills + ?, distar = ? WHERE playerid = ?;
 
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10
 
 [missionInsert]
 SQL1_1 = INSERT INTO missionsave
