@@ -1,8 +1,11 @@
 4.42
 
+ATTENTION: SQL database table players has changed. Either run DAddColumn_distar_4_42.sql.sql (from the 7z download) once or add the column manually behind the revives column: distar, VARCHAR 240, UTF8MB4_BIN, NOT NULL
+
 - Added: Player suppression, can be disabled in params "Player can be suppressed" or d_with_suppress in description.ext
 - Added: If d_with_mhq_camo is enabled it is now possible too deploy a mhq without camo net by selecting it with the "Deploy with camo net" checkbox
 - Added: Utility functions created fixed or improved: isinhouse, getbuildings, isvisible, sortarraybydistance, makemgroup now respects units per group, added dry run to occupy house script, by longtimegamer
+- Added: If a SQL database is available then player movement on foot, in land, air and maritime vehicles is added to the database (in meter)
 - Changed: CAS with very short cooldown (90 secs) if artillery is set to unlimited, by longtimegamer
 - Changed: Added visibility check for player and AI names over the head, means, players see the names above head if the unit is visible and not all the time
 - Changed: Maintarget prisoner event now has a suicide bomb if the rescue is botched, by longtimegamer
